counter remove againg solved

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ body {
   border: 2px solid white !important;
 }
 .hidden {
-  display: none !important;
+  display: none;
 }
 .title {
   text-align: center;
@@ -189,4 +189,13 @@ button {
   .card {
     flex-direction: column;
   }
+}
+
+@media only screen and (min-width: 1200px) {
+  .card {
+      width: 31%;
+      flex-direction: column;
+      min-height: 170px;
+      text-align: center;
+    }
 }
